--- a/app/src/main/res/layout/drawer_leftside.xml
+++ b/app/src/main/res/layout/drawer_leftside.xml
@@ -4,12 +4,13 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_default_profile_art" >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/ic_account_circle_white"
             android:id="@+id/profile_image"
             android:padding="10dp"/>
@@ -39,11 +40,6 @@
 
     </RelativeLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_default_profile_art" />
-
     <ListView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -53,7 +49,7 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#cccc"
+        android:background="#ffffff"
         tools:context=".NavigationDrawerFragment"
         ></ListView>
 
